@@ -22,6 +22,10 @@ Changes in @VERSION@
     * Implemented authorization cache, which is enabled by setting The
       authCacheTimeout configuration to the number of seconds the cache
       entry should be valid for.
+    * Added externalPasswordURL configuration option, which tells the server
+      to call that URL for password verification. When this option is used,
+      user passwords stored in the repository are ignored, and those passwords
+      cannot be changed.
 
   o Bug Fixes:
     * Fixed a bug that caused using groupName parameter with r.replace() to
